# deployvm

./: .env  .gitignore  AGENTS.md  ARCHITECTURE.md  AWS_PROVIDER.md  CLAUDE.md  DOMAIN_SETUP.md  NUXT_DEPLOY_NOTES.md  README.md  REFACTORING_PLAN.md  REFACTORING_SIMPLIFIED.md  chatboti-deploy.sh  chatboti.sh  deploy_vm.py  deploy_vm_legacy.py  publish.py  pyproject.toml  tspots-deploy.sh  tspots-update.sh  tspots.instance.json  tspots2-deploy.sh
.beads/: issues.jsonl  metadata.json
arx/: create-droplet.sh  delete-droplet.sh  deploy-fastapi.sh  deploy-nuxt.sh  nimago.droplet.txt  setup-nginx-ssl.sh  setup-nimago.sh  setup-server.sh
deploy_vm/: __init__.py  apps.py  cli.py  providers.py  server.py  types.py  utils.py
deployvm/: apps.py  cli.py  providers.py  server.py  types.py  utils.py
tests/: conftest.py  test_integration.py  test_npm_integration.py
tests/fixtures/fastapiapp/: pyproject.toml
tests/fixtures/flaskapp/: app.py  pyproject.toml
tests/fixtures/nextapp/: package-lock.json  package.json
tests/fixtures/nextapp/pages/: index.js
tests/fixtures/nextapp/pages/api/: health.js
tests/fixtures/nuxtapp/: app.vue  nuxt.config.ts  package-lock.json  package.json
tests/fixtures/nuxtapp/server/api/: health.get.ts
tests/fixtures/testapp/: app.py  pyproject.toml
