[project]
name = "deployvm"
version = "0.1.5"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "boto3>=1.35.0",
    "boto3-stubs~=1.42.46",
    "cyclopts>=3.0.0",
    "dnspython>=2.8.0",
    "fabric>=3.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "ruff>=0.14.14",
]

[project.scripts]
deployvm = "deployvm.cli:app"

[project.urls]
PyPI = "https://pypi.org/project/deployvm/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
